# Quorial_SoftwareDev

./: .env.example  .gitattributes  .gitignore  POETRY_COMMANDS.md  POETRY_COMMANDS.md.backup  README.md  pyproject.toml  requirements.txt  run_chat_app.py
flask_quorial/: __init__.py  auth.py  auu.py  chat.py  db.py  exams.py  library.py  state.py
flask_quorial/templates/: base.html  index.html
flask_quorial/templates/auth/: login.html  register.html
flask_quorial/templates/chat/: index.html
flask_quorial/tools/: db_insertdata.sql  schema.sql
src/: app_gradio.py  batch_upload.py  chroma_config.py  chunking_articles.py  clean_raw_data.py  preprocess.py  rag_pipeline.py  rebuild_chroma.py  retriever.py  small_test.py  upload_chunk.py
tests/: conftest.py  test_app.py
voxeurop_db/: chroma.sqlite3
voxeurop_db/b2d40ad6-1485-4ccb-8072-3c0958ff9346/: index_metadata.pickle
voxeurop_db_broken_20251112_2245/fc30d222-a333-4238-9f45-8ba2f11bf510/: index_metadata.pickle
